[package]
name = "toRemi"
version = "0.1.0"
edition = "2024"
dir= "4.0"
tracing =  "0.1"
[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

